# pikasso

./: CMakeLists.txt  README.md  org.kde.draw.appdata.xml  org.kde.draw.desktop  org.kde.pikasso.appdata.xml  org.kde.pikasso.desktop
.gitlab/: dependabot.yml
po/ar/: pikasso.po
po/ca/: pikasso.po
po/ca@valencia/: pikasso.po
po/cs/: pikasso.po
po/de/: pikasso.po
po/en_GB/: pikasso.po
po/eo/: pikasso.po
po/es/: pikasso.po
po/eu/: pikasso.po
po/fi/: pikasso.po
po/fr/: pikasso.po
po/ga/: pikasso.po
po/gl/: pikasso.po
po/he/: pikasso.po
po/hi/: pikasso.po
po/hu/: pikasso.po
po/it/: pikasso.po
po/ja/: pikasso.po
po/ka/: pikasso.po
po/ko/: pikasso.po
po/lt/: pikasso.po
po/nl/: pikasso.po
po/nn/: pikasso.po
po/pl/: pikasso.po
po/pt/: pikasso.po
po/pt_BR/: pikasso.po
po/ro/: pikasso.po
po/sk/: pikasso.po
po/sl/: pikasso.po
po/sv/: pikasso.po
po/tr/: pikasso.po
po/uk/: pikasso.po
po/zh_CN/: pikasso.po
po/zh_TW/: pikasso.po
src/: CMakeLists.txt  Messages.sh  drawingarea.cpp  drawingarea.h  main.cpp
src/contents/ui/: main.qml
src/rs/tessellation/: Cargo.toml  build.rs
src/rs/tessellation/src/: lib.rs  tessellation.rs
