[package]
name = "tessellation-ffi"
version = "0.1.0"
authors = ["Carl Schwan <carlschwan@kde.org>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cxx-build = "1.0.41"

[dependencies]
lyon = {version = "0.17.0" }
cxx = "1.0"

